# https://packaging.python.org/ja/latest/guides/writing-pyproject-toml/
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "lammps-utils"
dynamic = ["version"]
dependencies = []
requires-python = ">= 3.8"
authors = [{ name = "yu9824" }]
maintainers = [{ name = "yu9824" }]
description = ""
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
keywords = []
# https://pypi.org/classifiers/
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
] # https://pypi.org/classifiers/

[project.optional-dependencies]
test = ["pytest"]
dev = ["build"]
optional = ["colorlog", "tqdm"]
docs = ["sphinx", "sphinx_rtd_theme", "sphinx-markdown-tables", "recommonmark"]
gui = ["TkEasyGUI"]

[project.urls]
Homepage = "https://github.com/yu9824/lammps-utils"
# Documentation = "https://readthedocs.org"
PyPI = "https://pypi.org/project/lammps-utils/"
Source = "https://github.com/yu9824/lammps-utils"
Tracker = "https://github.com/yu9824/lammps-utils/issues"
Changelog = "https://github.com/yu9824/lammps-utils/blob/main/CHANGELOG.md"

[project.scripts]
lammps-utils = "lammps_utils.__main__:entrypoint"

# [project.gui-scripts]
# lammps-utils-gui = "lammps_utils:main_gui"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.dynamic]
version = { attr = "lammps_utils.__version__" }

[tool.setuptools.packages.find]
where = ["src/"]

[tool.ruff]
line-length = 79
indent-width = 4

[tool.ruff.lint]
unfixable = ["F401"]
