# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
[metadata]
name = lammps_utils
version = attr: lammps_utils.__version__
description =
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
license_files = LICENSE
# https://pypi.org/classifiers/
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: MIT License
author = yu9824
maintainer = yu9824
url = https://github.com/yu9824/lammps-utils
project_urls =
    Homepage = https://github.com/yu9824/lammps-utils
    PyPI = https://pypi.org/project/lammps-utils/
    Source = https://github.com/yu9824/lammps-utils
    Tracker = https://github.com/yu9824/lammps-utils/issues
    Changelog = https://github.com/yu9824/lammps-utils/blob/main/CHANGELOG.md

[options]
package_dir=
    =src
packages=find:
python_requires = >= 3.7
install_requires =
    typing-extensions >= 4.0.0; python_version < '3.8'

[options.packages.find]
where=src

[options.extras_require]
test = pytest
dev = build
optional = colorlog
docs = sphinx
       sphinx_rtd_theme
       sphinx-markdown-tables
       recommonmark
gui = TkEasyGUI

[options.entry_points]
console_scripts =
    lammps-utils = lammps_utils.__main__:entrypoint
# gui_scripts =
#     lammps-utils-gui = lammps_utils:main_gui
